--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <ul>
-        {% for item in list %}
-            <li>
-                <a href="/detail/{{ item.id }}">
-                {{ item.title }} </a> </li>
-        {% endfor %}
 
-    </ul>
+<div class="list-group">
+    {% for item in list %}
+    <a href="/detail/{{item.id}}" class="list-group-item">{{ item.title }}</a>
+    {% endfor %}
+</div>
+
 </body>
 </html>
